...
                            .font(.largeTitle)
                            .bold()

                        Text("Where am I?")
                            .font(.title3)

                        Text("Wakeup/Pickup Calculator")
                            .foregroundStyle(.secondary)
                    }
                    .frame(maxWidth: .infinity)
                    .multilineTextAlignment(.center)
                    .padding(.top, mainContentTopPadding)

...
